tdf#135106 Direct Formatting should be empty by default

Change-Id: Ic7dfb2e681c5128288b2f39054bc642ab6028fed